--- a/index.html
+++ b/index.html
@@ -47,7 +47,19 @@ d3.csv("cities.csv").then(function(data, error) {
 	var bubble = chart.selectAll("myCircles")
 		 .data(data)
 		 .enter()
-		 .append("circle")
+		 .append("g") // block containing the circle
+		 		.attr("class", "circleContainer")
+		 		.attr("transform", function(d){return "translate("+d.x+","+d.y+")"});
+
+  bubble.append("text")
+   			.attr("x", d => d.x)
+      	.attr("y", d => d.y)
+	      // .attr("dy", ".35em")	
+      	.text(d =>  d.City);
+
+
+	bubble
+		 .append("circle") // the circle
 		 		.attr("class", "bubble")
 		 		.attr("cx", d => d.x)
         .attr("cy", d => d.y)
@@ -56,13 +68,9 @@ d3.csv("cities.csv").then(function(data, error) {
         .attr("stroke", "#69b3a2")
         .attr("stroke-width", 3)
         .attr("fill-opacity", .4)
+        .on("mouseover", handleMouseOver)
+        .on("mouseout", handleMouseOut);
 
-  // // append text
-  bubble.append("g")
-      .attr("x", d => d.x/2)
-      .attr("y", d => d.y/2)
-      .attr("dy", ".35em")
-      .text(function(d) { return d.City; });
 });
 
 function type(d) {
@@ -70,35 +78,15 @@ function type(d) {
   return d;
 }
 
-	// d3.selectAll("p")
- //  	  .data([4, 8, 15, 16, 23, 42])
- //      .enter().append("p")
- //      .text(function(d) { return "I’m number " + d + "!"; });;
+function handleMouseOver(d, i) {
+	console.log("mouseover")
+	d3.select(this).transition().style("fill", "purple");
+}
 
-	//  d3.selectAll("h1")
-	//  	.data([1,2])
-	//  	.exit().remove();
-
-
-	// d3.selectAll("p").style("color", () => {
-	// 	return "hsl(" + Math.random() * 360 + ",100%,50%)";
-	// });
-
-	// d3.selectAll("p").style("background-color", (d, i) => {
-	// 	return i % 2 ? "#707070" : "#D0D0D0";
-	// });
-
-	// d3.select("body")
-	//   .selectAll("h2")
-	//   .data([1,2,3,4,5])
-	//   .text(function(d) { return d; })
-	//   .enter()
-	//   .append("h2")
-	//   .text(function(d) { return "I am a new" + d;})
-
-	 // d3.select("body").transition()
-	 //  .duration(5000)
-  //  	.style("background-color", "black");
+function handleMouseOut(d, i) {
+	console.log("mouseout");
+	d3.select(this).transition().style("fill", "69b3a2");
+}
 
 
 	
