--- a/index.html
+++ b/index.html
@@ -18,58 +18,96 @@
 
 <script>
 
+  // TODO move to separate script file
+
 // title
 d3.select(".title")
 	.text('Cities By Population');
 
+  //  // chart
+//  var chart = d3.select(".chart")
+//     .attr("width", '100%')
+//     .attr("height", 1000); // todo make 100 percent
+
+var width = 300, height = 300
+
+data = d3.csv("cities.csv").then(function(data, error) {
+ // clean data
+ // todo: replace with await
+ data.forEach((d) => {
+   d.Population = d.Population.replace(/,/g, '')
+   d.x = Math.random() * 1000 + d.Population; // + d.Population
+   d.y = Math.random() * 1000 + d.Population;
+   d.radius = Math.sqrt(d.Population / Math.PI)
+ });
+
+ nodes = data.map( i => {
+    var d = {
+      id: i.City,
+      radius: i.radius,
+      cx: i.x,
+      cy: i.y,
+      population: i.Population
+    };
+    return d;
+ });
+
+var simulation = d3.forceSimulation(nodes)
+  .force('charge', d3.forceManyBody().strength(-10))
+  .force('center', d3.forceCenter(300,300))
+  .force('collision', d3.forceCollide().radius(d => d.radius/20))
+  .on('tick', ticked);
+
+
+
 //todo: add info box (interactive)
 
-d3.csv("cities.csv").then(function(data, error) {
-	// clean data
-	// todo: replace with await
-	data.forEach((d) => {
-		d.Population = d.Population.replace(/,/g, '')
-		d.x = Math.random() * 500;
-		d.y = Math.random() * 500;
-	});
+// d3.csv("cities.csv").then(function(data, error) {
+// 	// clean data
+// 	// todo: replace with await
+// 	data.forEach((d) => {
+// 		d.Population = d.Population.replace(/,/g, '')
+// 		d.x = Math.random() * 500;
+// 		d.y = Math.random() * 500;
+// 	});
 
-	console.log(data)
+// 	console.log(data)
 
-	// chart
-	var chart = d3.select(".chart")
-    .attr("width", '100%')
-    .attr("height", 1000); // todo make 100 percent
+// 	// chart
+// 	var chart = d3.select(".chart")
+//     .attr("width", '100%')
+//     .attr("height", 1000); // todo make 100 percent
 
-	var x = d3.scaleLinear()
-    .domain([0, d3.max(data, function(d) { return d.Population; })])
-    .range([0, 30]);
+// 	var x = d3.scaleLinear()
+//     .domain([0, d3.max(data, function(d) { return d.Population; })])
+//     .range([0, 30]);
 
-	var bubble = chart.selectAll("myCircles")
-		 .data(data)
-		 .enter()
-		 .append("g") // block containing the circle
-		 		.attr("class", "circleContainer")
-		 		.attr("transform", function(d){return "translate("+d.x+","+d.y+")"});
+// 	var bubble = chart.selectAll("myCircles")
+// 		 .data(data)
+// 		 .enter()
+// 		 .append("g") // block containing the circle
+// 		 		.attr("class", "circleContainer")
+// 		 		.attr("transform", function(d){return "translate("+d.x+","+d.y+")"});
 
-  bubble.append("text")
-   			.attr("x", d => d.x)
-      	.attr("y", d => d.y)
-	      // .attr("dy", ".35em")	
-      	.text(d =>  d.City);
+//   bubble.append("text")
+//    			.attr("x", d => d.x)
+//       	.attr("y", d => d.y)
+// 	      // .attr("dy", ".35em")	
+//       	.text(d =>  d.City);
 
 
-	bubble
-		 .append("circle") // the circle
-		 		.attr("class", "bubble")
-		 		.attr("cx", d => d.x)
-        .attr("cy", d => d.y)
-					.attr("r", d => Math.sqrt(d.Population / Math.PI)/15) 
-        .style("fill", "69b3a2")
-        .attr("stroke", "#69b3a2")
-        .attr("stroke-width", 3)
-        .attr("fill-opacity", .4)
-        .on("mouseover", handleMouseOver)
-        .on("mouseout", handleMouseOut);
+// 	bubble
+// 		 .append("circle") // the circle
+// 		 		.attr("class", "bubble")
+// 		 		.attr("cx", d => d.x)
+//         .attr("cy", d => d.y)
+// 					.attr("r", d => Math.sqrt(d.Population / Math.PI)/15) 
+//         .style("fill", "69b3a2")
+//         .attr("stroke", "#69b3a2")
+//         .attr("stroke-width", 3)
+//         .attr("fill-opacity", .4)
+//         .on("mouseover", handleMouseOver)
+//         .on("mouseout", handleMouseOut);
 
 });
 
@@ -78,13 +116,71 @@ function type(d) {
   return d;
 }
 
+async function loadData() {
+  return await d3.csv('cities.csv');
+}
+
+function ticked() {
+   var chart = d3.select(".chart")
+    .attr("width", '100%')
+    .attr("height", 1000); // todo make 100 percent
+
+   var x = d3.scaleLinear()
+    .domain([0, d3.max(data, function(d) { return d.Population; })])
+    .range([0, 30]);
+
+  var bubble = d3.select('svg')
+    .selectAll('circle')
+    .data(nodes)
+
+    //  var bubble = chart.selectAll("myCircles")
+
+
+  // block containing the circle
+  container = bubble.enter()
+    .append("g") // block containing the circle
+    .attr("class", "circleContainer")
+    .attr("transform", d => {
+      xTrans = d.x*1.25 - 375;
+      yTrans = d.y*1.25 - 375;
+      return "translate(" + xTrans+ "," + yTrans + ")"
+    });
+
+  // add text
+  container.append("text")
+    .attr("x", d => d.x)
+    .attr("y", d => d.y)
+    // .attr("dy", ".35em") 
+    .text(d =>  d.id);
+
+  // the bubble
+  bubble.enter()
+    .append('circle')
+    .attr("class", "bubble")
+    .attr('r', d => d.radius/17)
+    .merge(bubble)
+    .attr('cx', d => d.x)
+    .attr('cy', d => d.y)
+    .style("fill", "69b3a2")
+    .attr("stroke", "#69b3a2")
+    .attr("stroke-width", 3)
+    .attr("fill-opacity", .4)
+    .attr("id", d => d.id)
+    .on("mouseover", handleMouseOver)
+    .on("mouseout", handleMouseOut);
+
+
+  bubble.exit().remove()
+
+}
+
 function handleMouseOver(d, i) {
-	console.log("mouseover")
 	d3.select(this).transition().style("fill", "purple");
+  console.log(d)
+  // console.log(d.id + " " + d.radius + " " + d.population)
 }
 
 function handleMouseOut(d, i) {
-	console.log("mouseout");
 	d3.select(this).transition().style("fill", "69b3a2");
 }
 
