--- a/simulation.html
+++ b/simulation.html
@@ -13,9 +13,9 @@
 	<div class="slider">
 		<label for="colorChangeSpeed"
 			   style="display: inline-block; text-align: right">
-         <span id="colorChangeSpeed-value">1000</span> ms
+         <span id="colorChangeSpeed-value">100</span> ms
   		</label>
-  		<input type="range" min="100" max="5000" value="1000" name="colorChangeSpeed" id="colorChangeSpeed">
+  		<input type="range" min="1" max="3000" value="100" name="colorChangeSpeed" id="colorChangeSpeed">
 	</div>
 
 	<div class="buttons">
@@ -109,7 +109,7 @@ setInterval(() => {
 	changeColor(i)
 	i++;
 	i = i === 7 ? 0 : i;
-}, 200);
+}, duration);
 
 
 </script>
